--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,38 @@
 version: '3.8'
 
 services:
-  core:
+  database:
+      image: mongo
+      command: --quiet
+      container_name: database
+      restart: always
+      ports:
+        - ${MONGO_PORT}:27017
+      environment:
+        MONGO_INITDB_DATABASE: ${MONGO_DATABASE}
+        MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USERNAME}
+        MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
+      volumes:
+        - ./docker/mongo/create-user.js:/docker-entrypoint-initdb.d/create-user.js:ro
+        - ./docker/tmp/mongo/db:/data/db
+
+  database-client:
+    image: mongo-express
+    container_name: database-client
+    ports:
+      - ${MONGO_EXPRESS_PORT}:${MONGO_EXPRESS_PORT}
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_ROOT_USERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_ROOT_PASSWORD}
+      ME_CONFIG_MONGODB_SERVER: database-client
+      VCAP_APP_PORT: ${MONGO_EXPRESS_PORT}
+    links:
+      - database-client
+
+  engine:
     build:
       dockerfile: Dockerfile
-      context: "./core"
+      context: "."
     volumes:
-      - /app/node_modules
-      - ./core:/core
+      - /engine/node_modules
+      - ./:/engine
