--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "tsc && node ./build/app.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.7.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
