--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "start": "tsc && node ./build/app.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "mongoose": "^6.7.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
