--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nodemon --watch src -e ts, --exec yarn start",
-    "start": "tsc && node ./build/app.js"
+    "start": "tsc && node ./build/index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
