--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ MONGO_DATABASE=stock-engine
 MONGO_USERNAME=stock-engine
 MONGO_PASSWORD=stock-engine
 MONGO_EXPRESS_PORT=8181
+FINANCIAL_DATA_API_URL=https://eodhistoricaldata.com/api/fundamentals
