--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
-    "mongoose": "^6.7.3"
+    "mongoose": "^6.7.3",
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.9",
+    "@types/node-fetch": "^2.6.2",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
