plugging in stock splits api

--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ MONGO_USERNAME=stock-engine
 MONGO_PASSWORD=stock-engine
 MONGO_EXPRESS_PORT=8181
 FINANCIAL_DATA_API_URL=https://eodhistoricaldata.com/api
+STOCK_SPLITS_DATA_API_URL=https://api.polygon.io/v3/reference/splits?
