--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Visual Studio Code Build and Debug assets
+# vsc
 .vscode/*
 
 # dependencies
@@ -13,15 +13,14 @@
 # production
 **/build
 
+# env
+.env
+
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# thoughts, questions, ideas
 notes.md
