--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/parser": "^5.44.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.28.0",
+    "moment": "^2.29.4",
     "nodemon": "^2.0.20",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3",
