--- a/.env.default
+++ b/.env.default
@@ -9,5 +9,7 @@ MONGO_USERNAME=stock-engine
 MONGO_PASSWORD=stock-engine
 MONGO_EXPRESS_PORT=8181
 FINANCIAL_DATA_API_URL=https://eodhistoricaldata.com/api
+
+# Kept here for future, as turned out, might not be necessary right now
 STOCK_SPLITS_DATA_API_URL=https://api.polygon.io/v3/reference/splits?
 STOCK_SPLITS_DATA_API_KEY=
