--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
         "@typescript-eslint/no-explicit-any": "error",
         "@typescript-eslint/no-unused-vars": "error",
         "indent": ["warn", 4, { "SwitchCase": 1 }],
-        "max-len": ["warn", { "code": 120 }],
+        "max-len": ["warn", { "code": 120, "ignoreComments": true }],
         "comma-dangle": ["warn", "never"],
         "quotes": ["warn", "single"],
         "prefer-const": "error",
