wip on risk free data fetch

--- a/.env.default
+++ b/.env.default
@@ -1,3 +1,5 @@
+# Engine specific:
+
 PORT=8000
 MONGO_PROTOCOL=mongodb
 MONGO_HOST=localhost
@@ -8,8 +10,14 @@ MONGO_DATABASE=stock-engine
 MONGO_USERNAME=stock-engine
 MONGO_PASSWORD=stock-engine
 MONGO_EXPRESS_PORT=8181
+
+# 3-rd party APIs:
+
 FINANCIAL_DATA_API_URL=https://eodhistoricaldata.com/api
 
 # Kept here for future, as turned out, might not be necessary right now
 STOCK_SPLITS_DATA_API_URL=https://api.polygon.io/v3/reference/splits?
 STOCK_SPLITS_DATA_API_KEY=
+
+NASDAQ_API=https://data.nasdaq.com/api/v3/datasets/USTREASURY/REALLONGTERM.json
+NASDAQ_API_KEY=
