--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "mongoose": "^6.7.3",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "yahoo-finance": "^0.3.7"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
