wip on sharpe ratio without cagr

--- a/.env.default
+++ b/.env.default
@@ -10,6 +10,7 @@ MONGO_DATABASE=stock-engine
 MONGO_USERNAME=stock-engine
 MONGO_PASSWORD=stock-engine
 MONGO_EXPRESS_PORT=8181
+BENCHMARK_TICKER = ^GSPC
 
 # 3-rd party APIs:
 
