--- a/.env.default
+++ b/.env.default
@@ -12,11 +12,10 @@ MONGO_PASSWORD=stock-engine
 MONGO_EXPRESS_PORT=8181
 BENCHMARK_TICKER = ^GSPC
 
-# 3-rd party APIs:
+# 3-rd party APIs (Kept here for future, as turned out, might not be necessary right now):
 
 FINANCIAL_DATA_API_URL=https://eodhistoricaldata.com/api
 
-# Kept here for future, as turned out, might not be necessary right now
 STOCK_SPLITS_DATA_API_URL=https://api.polygon.io/v3/reference/splits?
 STOCK_SPLITS_DATA_API_KEY=
 
