more refactoring and breaking down into smaller parts

--- a/.env.default
+++ b/.env.default
@@ -14,7 +14,7 @@ BENCHMARK_TICKER = ^GSPC
 
 # 3-rd party APIs (Kept here for future, as turned out, might not be necessary right now):
 
-FINANCIAL_DATA_API_URL=https://eodhistoricaldata.com/api
+FUNDAMENTALS_DATA_API_URL=https://eodhistoricaldata.com/api/fundamentals
 
 STOCK_SPLITS_DATA_API_URL=https://api.polygon.io/v3/reference/splits?
 STOCK_SPLITS_DATA_API_KEY=
