--- a/.env.default
+++ b/.env.default
@@ -10,7 +10,12 @@ MONGO_DATABASE=stock-engine
 MONGO_USERNAME=stock-engine
 MONGO_PASSWORD=stock-engine
 MONGO_EXPRESS_PORT=8181
+
+# Inputs:
+
 BENCHMARK_TICKER = ^GSPC
+
+# 3-rd party APIs:
 
 FUNDAMENTALS_DATA_API_URL=https://eodhistoricaldata.com/api/fundamentals
 
