--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       container_name: database
       restart: always
       ports:
-        - ${MONGO_PORT}:27017
+        - ${MONGO_PORT}:${MONGO_PORT}
       environment:
         MONGO_INITDB_DATABASE: ${MONGO_DATABASE}
         MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USERNAME}
