plug in api with proper key

--- a/.env.default
+++ b/.env.default
@@ -3,7 +3,7 @@
 PORT=8000
 MONGO_PROTOCOL=mongodb
 MONGO_HOST=localhost
-MONGO_PORT=27117
+MONGO_PORT=27017
 MONGO_ROOT_USERNAME=root
 MONGO_ROOT_PASSWORD=root
 MONGO_DATABASE=stock-engine
@@ -18,9 +18,10 @@ BENCHMARK_TICKER = ^GSPC
 # 3-rd party APIs:
 
 FUNDAMENTALS_DATA_API_URL=https://eodhistoricaldata.com/api/fundamentals
+FUNDAMENTALS_DATA_API_KEY=
 
 STOCK_SPLITS_DATA_API_URL=https://api.polygon.io/v3/reference/splits?
 STOCK_SPLITS_DATA_API_KEY=
 
-US_TREASURY_BOND_YIELD_API=https://data.nasdaq.com/api/v3/datasets/USTREASURY/YIELD.json
+US_TREASURY_BOND_YIELD_API_URL=https://data.nasdaq.com/api/v3/datasets/USTREASURY/YIELD.json
 US_TREASURY_BOND_YIELD_API_KEY=
