--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "ts-node-dev --quiet src/index.ts",
     "start": "tsc && node ./build/index.js"
   },
   "dependencies": {
@@ -12,7 +12,6 @@
     "http": "^0.0.1-security",
     "mongoose": "^6.7.3",
     "node-fetch": "^2.6.1",
-    "ts-node": "^10.9.1",
     "yahoo-finance2": "^2.3.10"
   },
   "devDependencies": {
@@ -27,6 +26,7 @@
     "dotenv": "^16.0.3",
     "eslint": "^8.28.0",
     "moment": "^2.29.4",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3",
     "uuid": "^9.0.0"
   }
