--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "mongodb": "^4.13.0",
     "mongoose": "^6.7.3",
     "node-fetch": "^2.6.1",
     "yahoo-finance2": "^2.3.10"
