--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongodb": "^4.13.0",
     "mongoose": "^6.7.3",
     "node-fetch": "^2.6.1",
+    "piscina": "^3.2.0",
     "yahoo-finance2": "^2.3.10"
   },
   "devDependencies": {
