working on threading

--- a/.env.default
+++ b/.env.default
@@ -20,7 +20,7 @@ BENCHMARK_TICKER = ^GSPC
 
 # 3-rd party APIs:
 
-FUNDAMENTALS_DATA_API_URL=https://eodhistoricaldata.com/api/bulk-fundamentals
+FUNDAMENTALS_DATA_API_URL=https://eodhistoricaldata.com/api
 FUNDAMENTALS_DATA_API_KEY=
 
 STOCK_SPLITS_DATA_API_URL=https://api.polygon.io/v3/reference/splits
