--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "tsc && node ./build/index.js"
   },
   "dependencies": {
+    "async-sema": "^3.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
