--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^6.7.3",
     "node-fetch": "^2.6.1",
     "piscina": "^3.2.0",
+    "ts-transformer-keys": "^0.4.4",
     "yahoo-finance2": "^2.3.10"
   },
   "devDependencies": {
