--- a/runner/package.json
+++ b/runner/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "run": "tsc && node ./build/index.js"
+    "boot": "tsc && node ./build/index.js"
   },
   "dependencies": {
     "node-fetch": "^2.6.1"
@@ -13,6 +13,8 @@
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
     "dotenv": "^16.0.3",
-    "eslint": "^8.28.0"
+    "eslint": "^8.28.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.3"
   }
 }
