--- a/engine/package.json
+++ b/engine/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^6.7.3",
     "node-fetch": "^2.6.1",
     "piscina": "^3.2.0",
+    "winston": "^3.8.2",
     "yahoo-finance2": "^2.3.10"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "@types/node": "^18.11.9",
     "@types/node-fetch": "^2.6.2",
     "@types/uuid": "^8.3.4",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
     "dotenv": "^16.0.3",
